--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-certifi==2020.4.5.1
-chardet==3.0.4
-click==7.1.1
-Flask==1.1.1
-idna==2.9
-itsdangerous==1.1.0
-Jinja2==2.11.3
-lxml==4.6.3
-MarkupSafe==1.1.1
-requests==2.23.0
-urllib3==1.26.5
-Werkzeug==1.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+Flask==2.0.3
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.0
+MarkupSafe==2.1.1
+requests==2.27.1
+urllib3==1.26.9
+Werkzeug==2.0.3
